--- a/IsarMathLib/document/root.tex
+++ b/IsarMathLib/document/root.tex
@@ -64,6 +64,13 @@
 \newcommand{\isasymlsrset}{\isamath{<_{\mathbb{R}}}}
 \newcommand{\isasymcltrrset}{<}
 
+%suppress some characters
+\renewcommand{\isachardoublequote}{}%
+\renewcommand{\isachardoublequoteopen}{}%
+\renewcommand{\isachardoublequoteclose}{}%
+\renewcommand{\isacharquery}{}%
+\renewcommand{\isacharbackquote}{}%
+
 
 \begin{document}
 
@@ -72,7 +79,7 @@
 \maketitle
 
 \begin{abstract}
-This is the proof document of the IsarMathLib project version 1.9.8. 
+This is the proof document of the IsarMathLib project version 1.10.0. 
 IsarMathLib is a library of formalized mathematics for Isabelle2019 (ZF logic). 
  
 \end{abstract}
