passes isar2html and isabelle build

--- a/IsarMathLib/document/root.tex
+++ b/IsarMathLib/document/root.tex
@@ -50,6 +50,8 @@
 \newcommand{\isasympr}{\isamath{\prod}}
 \newcommand{\isasymrmu}{\isamath{\cdot}}
 \newcommand{\isasymssum}{\isamath{\sum}}
+\newcommand{\isasymsdot}{\isamath{\cdot}}
+\newcommand{\isasymsinv}{\isamath{^{-1}}}
 
 %MMIsar notation
 \newcommand{\isasymcaddset}{+}
@@ -79,7 +81,7 @@
 \maketitle
 
 \begin{abstract}
-This is the proof document of the IsarMathLib project version 1.14.0. 
+This is the proof document of the IsarMathLib project version 1.15.0. 
 IsarMathLib is a library of formalized mathematics for Isabelle2020 (ZF logic). 
  
 \end{abstract}
