fixed proof document generation

--- a/IsarMathLib/document/root.tex
+++ b/IsarMathLib/document/root.tex
@@ -1,27 +1,8 @@
 \documentclass[11pt,a4paper]{article}
-\usepackage{isabelle,isabellesym}
-
+\usepackage{graphicx,isabelle,isabellesym}
+\usepackage{amssymb}
 \usepackage{textcomp}
-
-% further packages required for unusual symbols (see also isabellesym.sty)
-% use only when needed
-\usepackage{amssymb}                  % for \<leadsto>, \<box>, \<diamond>,
-                                       % \<sqsupset>, \<mho>, \<Join>, 
-                                       % \<lhd>, \<lesssim>, \<greatersim>,
-                                       % \<lessapprox>, \<greaterapprox>,
-                                       % \<triangleq>, \<yen>, \<lozenge>
-%\usepackage[greek,english]{babel}     % greek for \<euro>,
-                                       % english for \<guillemotleft>, 
-                                       %             \<guillemotright>
-                                       % default language = last
-%\usepackage[latin1]{inputenc}         % for \<onesuperior>, \<onequarter>,
-                                       % \<twosuperior>, \<onehalf>,
-                                       % \<threesuperior>, \<threequarters>,
-                                       % \<degree>
-%\usepackage[only,bigsqcap]{stmaryrd}  % for \<Sqinter>
-%\usepackage{eufrak}                   % for \<AA> ... \<ZZ>, \<aa> ... \<zz>
-                                       % (only needed if amssymb not used)
-%\usepackage{textcomp}                 % for \<cent>, \<currency>
+\usepackage[english]{babel}
 
 % this should be the last package used
 \usepackage{pdfsetup}
@@ -81,7 +62,7 @@
 \maketitle
 
 \begin{abstract}
-This is the proof document of the IsarMathLib project version 1.15.1. 
+This is the proof document of the IsarMathLib project version 1.16.0. 
 IsarMathLib is a library of formalized mathematics for Isabelle2021 (ZF logic). 
  
 \end{abstract}
