--- a/IsarMathLib/document/root.tex
+++ b/IsarMathLib/document/root.tex
@@ -28,6 +28,8 @@
 \newcommand{\isasymsm}{-}
 \newcommand{\isasymfp}{+}
 \newcommand{\isasymfd}{/}
+\newcommand{\isasymrd}{/}
+\newcommand{\isasymld}{\isamath{\backslash}}
 \newcommand{\isasympr}{\isamath{\prod}}
 \newcommand{\isasymrmu}{\isamath{\cdot}}
 \newcommand{\isasymssum}{\isamath{\sum}}
