added ordered loops

--- a/IsarMathLib/document/root.bib
+++ b/IsarMathLib/document/root.bib
@@ -68,3 +68,14 @@
 	Author = {Gyula Lakos},
 	Title = {{N}otes on {L}ebesgue {I}ntegration},
 	Year = 2005}
+	
+@article{Zelinski1948,
+	Author = {D. Zelinski},
+	Title = {{O}n {O}rdered {L}oops},
+	Journal = {Amer. J. Math.},
+	Volume = {70},
+	Number = {4},
+	Month = {Oct.},
+	Year = 1948,
+	Pages = {681-697}}
+	
