--- a/IsarMathLib/document/root.tex
+++ b/IsarMathLib/document/root.tex
@@ -14,6 +14,7 @@
 \newcommand{\isasymlsq}{\isamath{\leq}}
 \newcommand{\isasymzlq}{\isamath{\leq}}
 \newcommand{\isasymls}{<}
+\newcommand{\isasymad}{+}
 \newcommand{\isasymra}{+}
 \newcommand{\isasymza}{+}
 \newcommand{\isasymsad}{+}
