updated to Isabelle2021-1

--- a/IsarMathLib/document/root.tex
+++ b/IsarMathLib/document/root.tex
@@ -65,8 +65,8 @@
 \maketitle
 
 \begin{abstract}
-This is the proof document of the IsarMathLib project version 1.22.0. 
-IsarMathLib is a library of formalized mathematics for Isabelle2021 (ZF logic). 
+This is the proof document of the IsarMathLib project version 1.22.1. 
+IsarMathLib is a library of formalized mathematics for Isabelle2021-1 (ZF logic). 
  
 \end{abstract}
 
