--- a/IsarMathLib/document/root.tex
+++ b/IsarMathLib/document/root.tex
@@ -66,7 +66,7 @@
 
 \begin{abstract}
 This is the proof document of the IsarMathLib project version 1.23.0. 
-IsarMathLib is a library of formalized mathematics for Isabelle2021-1 (ZF logic). 
+IsarMathLib is a library of formalized mathematics for Isabelle2022 (ZF logic). 
  
 \end{abstract}
 
