added the first version of Ring_Binomial_ZF

--- a/IsarMathLib/document/root.tex
+++ b/IsarMathLib/document/root.tex
@@ -35,6 +35,7 @@
 \newcommand{\isasymrmu}{\isamath{\cdot}}
 \newcommand{\isasymssum}{\isamath{\sum}}
 \newcommand{\isasymsdot}{\isamath{\cdot}}
+\newcommand{\isasymnm}{\isamath{\cdot}}
 \newcommand{\isasymsinv}{\isamath{^{-1}}}
 
 %MMIsar notation
