--- a/IsarMathLib/document/root.tex
+++ b/IsarMathLib/document/root.tex
@@ -66,8 +66,8 @@
 \maketitle
 
 \begin{abstract}
-This is the proof document of the IsarMathLib project version 1.34.0. 
-IsarMathLib is a library of formalized mathematics for Isabelle2025 (ZF logic). 
+This is the proof document of the IsarMathLib project version 1.35.0. 
+IsarMathLib is a library of formalized mathematics for Isabelle2025-1 (ZF logic). 
  
 \end{abstract}
 
